Start a new plan to use Workbox to generate a ServiceWorker to cache everything for offline. CRA eject if necessary.

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -20,44 +21,14 @@
       </h1>
     </nav>
   </header>
-  
+
   <noscript>You need to enable JavaScript to run this app.</noscript>
 
-  <main id="main-content">
-    <!-- TODO: Reactify the map?  Maybe we don't have to do that part however.
-    <section id="map-container">
-      <div tabindex="0" id="map" role="application" aria-label="Map with restaurants"></div>
-      <div id="app-map"></div>
-    </section>
+  <main id="main-content" />
 
-    <section>
-      <div class="filter-options">
-        <h2>Filter Results</h2>
-        <div class="select-container">
-          <select 
-            id="neighborhoods-select" 
-            name="neighborhoods" 
-            aria-label="select neighborhood" 
-            onchange="updateRestaurants()"
-          >
-            <option value="all">All Areas</option>
-          </select>
-          <select 
-            id="cuisines-select" 
-            name="cuisines" 
-            aria-label="select type of cuisine" 
-            onchange="updateRestaurants()"
-          >
-            <option value="all">All Cuisines</option>
-          </select>
-        </div>
-      </div>
-      <ul id="restaurants-list"></ul>
-      <ul id="app-restaurants"></ul>
-    </section> -->
-  </main>
-
+  <!-- TODO: Investigate if all of new-main.js is still needed. -->
   <script type="application/javascript" charset="utf-8" src="js/new-main.js"></script>
+
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCpPYmhjSFfGFY-nLn0G5CxCHp_IwfAaFU&libraries=places&callback=initMap"></script>
 
   <footer id="footer">
